# project-darkfire

./: .gitignore  .sconsign.dblite  CMakeLists.txt  SConstruct  audio_layout.tres  custom_layout.tres  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot
Areas/: empty.tscn  rust_testing.tscn  testing_world.tscn
Components/: health_component.tscn  player_input_component.tscn  sfx_comp.tscn  sfx_component.tscn  sfx_manager.tscn
Components/GUI/: crosshair.tscn  pause_menu.tscn  settings_menu.tscn  state_display.tscn  util_menu.tscn  video_settings.tscn
Entities/: player.tscn  rust_player.tscn
FX/SFX/: collide.ogg.import  concrete-footsteps-6752.mp3.import  wind-ambience-14720.mp3.import  wind1.mp3.import  wind2.mp3.import  wind3.mp3.import
Objects/: prototype_wall_1.tscn
Objects/World/: prototype_ground.tscn  prototype_rigibody.tscn  prototype_sphere.tscn
Resources/AudioTracks/: audiotrack_wind1.tres  track1.tres  track2.tres  track_amb_wind1.tres  track_amb_wind2.tres  track_amb_wind3.tres  track_sfx_walking_concrete.tres
Scripts/: empty.gd  light_test_script.gd
Scripts/Autoloads/: TestingScript.gd  signal_bus.gd
Scripts/Component/: health_component.gd  player_input_component.gd  sfx_comp.gd  sfx_component.gd  (+1 more)
Textures/: close_button.png.import  crosshair.png.import
icons/: RustPlayer3D.svg.import
rust-src/: Cargo.toml
src/: AudioTrack.cpp  AudioTrack.h  AudioTrack.os  SFXManager.cpp  SFXManager.h  SFXManager.os  Utilities.cpp  Utilities.h  Utilities.os  register_types.cpp  register_types.h  register_types.os
(+45 files in other folders)
